Fixed extra horizontal spacing for extension component

--- a/slack-clone/src/components/footer/Extensions/Extensions.scss
+++ b/slack-clone/src/components/footer/Extensions/Extensions.scss
@@ -9,6 +9,7 @@
     background-color: rgb(245, 245, 245);
     text-align: center;
     padding: 10px;
+    box-sizing: border-box;
 
     .info{
         margin: 10px;
