--- a/slack-clone/src/components/navbar/drawer/Drawer.scss
+++ b/slack-clone/src/components/navbar/drawer/Drawer.scss
@@ -106,7 +106,7 @@ $opacity-speed: 300ms;
             width: 100vw;
             height: 40px;
 
-            @media(min-width: 500px){
+            @media(min-width: 750px){
                 width: 90vw;
             }
 
